--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gverse",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "description": "Object Graph Mapper for Dgraph",
   "main": "dist/gverse/index.js",
   "types": "dist/gverse/index.d.ts",
@@ -39,6 +39,7 @@
     "typescript": "~3.5.3"
   },
   "dependencies": {
+    "@types/protobufjs": "^6.0.0",
     "chalk": "^2.4.2",
     "debug": "^4.1.1",
     "dgraph-js": "~1.3.1",
